# Open-Station

./: .gitignore  Cargo.toml  LICENSE  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
crates/open-station-core/: Cargo.toml
crates/open-station-core/src/: config.rs  hotkeys.rs  lib.rs  practice.rs  state.rs
crates/open-station-core/src/input/: mapping.rs  mod.rs
crates/open-station-protocol/: Cargo.toml
crates/open-station-protocol/src/: connection.rs  driver_station.rs  lib.rs  types.rs
crates/open-station-protocol/src/packet/: incoming.rs  mod.rs  outgoing.rs  tcp.rs
docs/plans/: 2026-02-15-open-station-design.md  2026-02-15-open-station-implementation.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs
src/components/: StatusPane.tsx  TabBar.tsx
src/components/tabs/: BothTab.tsx  CANPowerTab.tsx  ChartsTab.tsx  DiagnosticsTab.tsx  MessagesTab.tsx  OperationTab.tsx  SetupTab.tsx  USBDevicesTab.tsx
src/hooks/: useTauriCommand.ts  useTauriEvent.ts
