[package]
name = "open-station"
version = "0.1.0"
edition = "2021"

[lib]
name = "open_station_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open-station-core = { path = "../crates/open-station-core" }
open-station-protocol = { path = "../crates/open-station-protocol" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
