[package]
name = "open-station-core"
version = "0.1.0"
edition = "2021"

[dependencies]
open-station-protocol = { path = "../open-station-protocol" }
gilrs = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
log = "0.4"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
rdev = "0.5"

[dev-dependencies]
tempfile = "3"
