[package]
name = "open-station-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time", "macros"] }
mdns-sd = "0.11"
log = "0.4"
thiserror = "2"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
